# profile-extractor

./: .env.example  .gitignore  LICENSE  README.md  main.py  output_urls.json  pyproject.toml
data/: uidaho_urls.json
docs/planning/: code-review-analysis.md  improvements.md  refactoring.md
docs/prompts/roles/: ai-engineer.md  data-scientist.md  example.md  project-manager.md  technical-writer.md  web-scraping-expert.md
docs/research/: architecture.md  data-models.md  model-cost-benefit-analysis.md  plan.md  spike.md  testing.md
docs/research/initial/: data-models.md  maintenance.md  metrics.md  spike.md
docs/research/second_pass/: Example-categories-for-profiles.csv  group_urls.json  group_urls_analysis.md  updates.md
output/: errors_extracted_profiles.xlsx  extracted_profiles.csv  extracted_profiles.xlsx  extracted_profiles_errors.csv  extracted_profiles_errors.xlsx  ~$extracted_profiles.xlsx
output/sample_of_100/: extracted_profiles.csv  extracted_profiles.xlsx  extracted_profiles_errors.csv  extracted_profiles_errors.xlsx
scripts/: csv-to-excel.py  process_urls.py  view_threads.py
src/: cleanup.py  config.py  graph.py  nodes.py  processing.py  reporting.py  schemas.py  setup.py  state.py  utils.py
